--- a/.github/workflows/fork-wf.yml
+++ b/.github/workflows/fork-wf.yml
@@ -6,4 +6,4 @@ jobs:
     name: echo-non
     steps:
       - name: echo-1
-        run: echo "non je ne veux pas"
+        run: echo "si je veux bien"
