Remove fork-wf [skip ci]

--- a/.github/workflows/pull-exo.yml
+++ b/.github/workflows/pull-exo.yml
@@ -5,4 +5,4 @@ jobs:
         name: Echo qu'il y a eu une pull
         runs-on: ubuntu-latest
         steps: 
-            - run: echo "Il y a eu un pull"
+            - run: echo "Il y a eu un pull, oui en effet"
