--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -5,10 +5,18 @@ jobs:
     runs-on: ubuntu-latest
     name: Build Vue
     steps:
-    - uses: actions/checkout@v2
-    - id: Build-Vue
-      uses: xRealNeon/VuePagesAction@1.0.1
-      with:
-        username: 'Franfran62'
-        reponame: 'la-franquette-website'
-        token: ${{ secrets.GITHUB_TOKEN }} 
+      - name: get the code 
+        uses: actions/checkout@v4
+      - name: setup node 
+        uses: actions/setup-node@v4
+        with:
+          node_version: 18
+      - name: npm install
+        run: npm install
+      - name: npm build
+        run: npm run build 
+      - name: get the dist file into an artifact 
+        uses: actions/upload-artifact@v4
+        with: 
+          path: ./dist
+
