--- a/.github/workflows/manual-deploy.yml
+++ b/.github/workflows/manual-deploy.yml
@@ -18,4 +18,5 @@ jobs:
       - name: get the dist file into an artifact 
         uses: actions/upload-artifact@v4
         with: 
+          name: la-bonne-franquette
           path: ./dist
